[B]Version 1.0.4 - 2017-02-11[/B]
- fix for international changes
[B]Version 1.0.3 - 2017-02-11[/B]
- fix for website changes
[B]Version 1.0.2 - 2016-09-20[/B]
- fixed live channel, alternate parsing
[B]Version 1.0.1 - 2016-09-15[/B]
- fixed live channel
[B]Version 1.0.0 - 2016-04-21[/B]
- pre release (beta)
