@@ -1,3 +1,5 @@
+[B]Version 1.0.5 - 2018-05-03[/B]
+- primary rewrote stream logic
 [B]Version 1.0.4 - 2017-02-11[/B]
 - fix for international changes
 [B]Version 1.0.3 - 2017-02-11[/B]
